[tool.poetry]
name = "jsondb"
version = "0.1.0"
description = "Some helpers to use a JSON file like it is a database."
authors = ["Anand Krishna <anandkrishna2312@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
